company edit and default translate langs
