# public/swagger.json
@@ -194,6 +194,9 @@
 					"currencySymbol": {
 						"type": "string"
 					},
+					"currency_symbol": {
+						"type": "string"
+					},
 					"timezone": {
 						"type": "string"
 					},
@@ -227,6 +230,12 @@
 					},
 					"rate": {
 						"$ref": "#/components/schemas/IRate"
+					},
+					"langs": {
+						"items": {
+							"type": "string"
+						},
+						"type": "array"
 					}
 				},
 				"required": [
@@ -235,10 +244,7 @@
 					"tin",
 					"login",
 					"email",
-					"currencySymbol",
-					"timezone",
-					"lang",
-					"utcDiff"
+					"lang"
 				],
 				"type": "object",
 				"additionalProperties": false
@@ -1525,6 +1531,72 @@
 				],
 				"type": "object",
 				"additionalProperties": false
+			},
+			"IWhoAmI": {
+				"properties": {
+					"company": {
+						"properties": {
+							"langs": {
+								"items": {
+									"type": "string"
+								},
+								"type": "array"
+							},
+							"lang": {
+								"type": "string"
+							},
+							"symbol": {
+								"type": "string"
+							},
+							"email": {
+								"type": "string"
+							},
+							"title": {
+								"type": "string"
+							},
+							"id": {
+								"type": "string"
+							}
+						},
+						"required": [
+							"lang",
+							"symbol",
+							"email",
+							"title",
+							"id"
+						],
+						"type": "object"
+					},
+					"user": {
+						"properties": {
+							"login": {
+								"type": "string"
+							},
+							"type": {
+								"type": "string"
+							},
+							"name": {
+								"type": "string"
+							},
+							"id": {
+								"type": "string"
+							}
+						},
+						"required": [
+							"login",
+							"type",
+							"name",
+							"id"
+						],
+						"type": "object"
+					}
+				},
+				"required": [
+					"company",
+					"user"
+				],
+				"type": "object",
+				"additionalProperties": false
 			}
 		},
 		"securitySchemes": {
@@ -2585,6 +2657,99 @@
 						}
 					}
 				}
+			}
+		},
+		"/company-update": {
+			"post": {
+				"operationId": "Update",
+				"responses": {
+					"204": {
+						"description": "No content"
+					},
+					"401": {
+						"description": "Unauthorized request response",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/ErrorResponse"
+								}
+							}
+						}
+					},
+					"500": {
+						"description": "Response with error",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/ErrorResponse"
+								}
+							}
+						}
+					}
+				},
+				"security": [
+					{
+						"Bearer": [
+							"AuthService"
+						]
+					}
+				],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/ICompany"
+							}
+						}
+					}
+				}
+			}
+		},
+		"/company": {
+			"post": {
+				"operationId": "Company",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/ICompany"
+								}
+							}
+						}
+					},
+					"401": {
+						"description": "Unauthorized request response",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/ErrorResponse"
+								}
+							}
+						}
+					},
+					"500": {
+						"description": "Response with error",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/ErrorResponse"
+								}
+							}
+						}
+					}
+				},
+				"security": [
+					{
+						"Bearer": [
+							"AuthService"
+						]
+					}
+				],
+				"parameters": []
 			}
 		},
 		"/day-stats": {
@@ -4939,6 +5104,51 @@
 						}
 					}
 				}
+			}
+		},
+		"/whoami": {
+			"post": {
+				"operationId": "Whoami",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/IWhoAmI"
+								}
+							}
+						}
+					},
+					"401": {
+						"description": "Unauthorized request response",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/ErrorResponse"
+								}
+							}
+						}
+					},
+					"500": {
+						"description": "Response with error",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/ErrorResponse"
+								}
+							}
+						}
+					}
+				},
+				"security": [
+					{
+						"Bearer": [
+							"AuthService"
+						]
+					}
+				],
+				"parameters": []
 			}
 		}
 	},
